--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: romebell/hello-world-javascript-action
+        uses: romebell/hello-world-javascript-action@v1.0.0
         with:
           who-to-greet: 'Rome Bell'
       # Use the output from the `hello` step
