--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,9 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: romebell/hello-world-javascript-action@v1.0.0
+        uses: romebell/hello-world-javascript-action@v1
         with:
-          who-to-greet: 'Rome Bell'
+          who-to-greet: 'Rome'
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
